# creative_projects_rust

chapter01/use_lazy_static/: Cargo.toml
chapter01/use_lazy_static/src/: main.rs
chapter01/use_logger/: Cargo.toml
chapter01/use_logger/src/: main.rs
chapter01/use_rand/: Cargo.toml
chapter01/use_structopt/: Cargo.toml
chapter01/use_structopt/src/: main.rs
chapter02/data/: sales2.json
chapter02/json_dynamic/: Cargo.toml
chapter02/json_dynamic/src/: main.rs
chapter02/json_static/: Cargo.toml
chapter02/json_static/src/: main.rs
chapter02/sqlite_example/: Cargo.toml  sales.db
chapter02/sqlite_example/src/: main.rs
chapter02/toml_dynamic/: Cargo.toml
chapter02/toml_dynamic/src/: main.rs
chapter02/toml_static/: Cargo.toml
chapter02/xml_example/: Cargo.toml
chapter03/file_transfer/: Cargo.toml  datafile.txt  df.txt663.txt
chapter03/file_transfer_stub/: Cargo.toml
chapter03/json_db/: Cargo.toml
chapter03/memory_db/: Cargo.toml
chapter04/auth/: Cargo.toml
chapter04/crud/: Cargo.toml
chapter04/list/: Cargo.toml
chapter04/templ/: Cargo.toml
chapter05/adder/: Cargo.toml
chapter05/incr/: Cargo.toml
chapter05/login/: Cargo.toml
chapter05/yauth/: Cargo.toml
chapter05/yclient/: Cargo.toml
chapter05/yclient/src/: login.rs  main.rs
chapter06/silent_slalom/: Cargo.toml
chapter06/ski/: Cargo.toml
chapter06/ski/src/: main.rs
chapter06/slalom_assets/: Cargo.toml
chapter07/gg_silent_slalom/: Cargo.toml
chapter07/gg_ski/: Cargo.toml
chapter07/gg_whack/: Cargo.toml
chapter08/parser_abc/: Cargo.toml
hello-rs/: Cargo.toml
(+29 files in other folders)
